--- a/Sunshine/app/src/main/AndroidManifest.xml
+++ b/Sunshine/app/src/main/AndroidManifest.xml
@@ -29,8 +29,12 @@
             android:parentActivityName=".MainActivity" >
         </activity>
 
+        <provider
+            android:authorities="com.example.android.sunshine.app"
+            android:name =".data.WeatherProvider" />
 
 
     </application>
+
 
 </manifest>
